Added footer links

--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
   </head>
   <body>
     <h1>Weather Search</h1>
+    <footer>
+      Coded by
+      <a href="https://github.com/lynds-code" target="_blank">Lyndsey G</a>,
+      open-sourced on
+      <a
+        href="https://github.com/lynds-code/vanilla-weather-search"
+        ptarget="_blank"
+        >Github</a
+      >
+      and hosted on
+      <a href="https://vanilla-weather-search-hw.netlify.app/" target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
