--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Vanilla Weather Search HW</title>
   </head>
   <body>
-    <h1>Weather Search</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Day 12:00, scattered clouds
+          <br />
+          Humidity: 50%, Wind: 3.13m/h
+        </p>
+      </div>
+      <div>🌤️ 60°F</div>
+    </main>
     <footer>
       Coded by
       <a href="https://github.com/lynds-code" target="_blank">Lyndsey G</a>,
