--- a/index.html
+++ b/index.html
@@ -3,39 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Vanilla Weather Search HW</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Day 12:00, scattered clouds
-          <br />
-          Humidity: 50%, Wind: 3.13m/h
-        </p>
-      </div>
-      <div>🌤️ 60°F</div>
-    </main>
-    <footer>
-      Coded by
-      <a href="https://github.com/lynds-code" target="_blank">Lyndsey G</a>,
-      open-sourced on
-      <a
-        href="https://github.com/lynds-code/vanilla-weather-search"
-        ptarget="_blank"
-        >Github</a
-      >
-      and hosted on
-      <a href="https://vanilla-weather-search-hw.netlify.app/" target="_blank"
-        >Netlify</a
-      >
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Day 12:00, scattered clouds
+            <br />
+            Humidity: 50%, Wind: 3.13m/h
+          </p>
+        </div>
+        <div>🌤️ 60°F</div>
+      </main>
+      <footer>
+        Coded by
+        <a href="https://github.com/lynds-code" target="_blank">Lyndsey G</a>,
+        open-sourced on
+        <a
+          href="https://github.com/lynds-code/vanilla-weather-search"
+          ptarget="_blank"
+          >Github</a
+        >
+        and hosted on
+        <a href="https://vanilla-weather-search-hw.netlify.app/" target="_blank"
+          >Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
