--- a/index.html
+++ b/index.html
@@ -26,15 +26,21 @@
         </form>
       </header>
       <main>
-        <div>
-          <h1>Paris</h1>
-          <p>
-            Day 12:00, scattered clouds
-            <br />
-            Humidity: 50%, Wind: 3.13m/h
-          </p>
+        <div class="weather-app-info">
+          <div>
+            <h1 class="city">Paris</h1>
+            <p class="city-weather-details">
+              Day 12:00, scattered clouds
+              <br />
+              Humidity: <strong>50%</strong>, Wind: <strong>3.13m/h</strong>
+            </p>
+          </div>
+          <div class="weather-temperature-container">
+            <div class="weather-icon">🌤️</div>
+            <div class="weather-temp">60</div>
+            <div class="weather-unit">°F</div>
+          </div>
         </div>
-        <div>🌤️ 60°F</div>
       </main>
       <footer>
         Coded by
