--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city..."
             required
             class="search-form-input"
+            id="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-submit" />
         </form>
@@ -28,7 +29,7 @@
       <main>
         <div class="weather-app-info">
           <div>
-            <h1 class="city">Paris</h1>
+            <h1 class="city" id="city">Paris</h1>
             <p class="city-weather-details">
               Day 12:00, scattered clouds
               <br />
@@ -57,5 +58,6 @@
         >
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
