--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="weather-temperature-container">
             <div class="weather-icon">🌤️</div>
-            <div class="weather-temp">60</div>
+            <div class="weather-temp" id="temp">60</div>
             <div class="weather-unit">°F</div>
           </div>
         </div>
