Injected more weather data

--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
       <main>
         <div class="weather-app-info">
           <div>
-            <h1 class="city" id="city">Paris</h1>
+            <h1 class="city" id="city"></h1>
             <p class="city-weather-details">
-              Day 12:00, scattered clouds
+              <span id="time"> </span>, <span id="description"></span>
               <br />
-              Humidity: <strong>50%</strong>, Wind: <strong>3.13m/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind"></strong>
             </p>
           </div>
           <div class="weather-temperature-container">
             <div class="weather-icon">🌤️</div>
-            <div class="weather-temp" id="temp">60</div>
+            <div class="weather-temp" id="temp"></div>
             <div class="weather-unit">°F</div>
           </div>
         </div>
