Injected icon weather data

--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
             </p>
           </div>
           <div class="weather-temperature-container">
-            <div class="weather-icon">🌤️</div>
+            <div>
+              <img
+                class="weather-icon"
+                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
+                alt=""
+              />
+            </div>
             <div class="weather-temp" id="temp"></div>
             <div class="weather-unit">°F</div>
           </div>
