--- a/index.html
+++ b/index.html
@@ -39,13 +39,7 @@
             </p>
           </div>
           <div class="weather-temperature-container">
-            <div>
-              <img
-                class="weather-icon"
-                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
-                alt=""
-              />
-            </div>
+            <div id="icon"></div>
             <div class="weather-temp" id="temp"></div>
             <div class="weather-unit">°F</div>
           </div>
