Added forecast HTML

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
             <div class="weather-unit">°F</div>
           </div>
         </div>
+        <div class="weather-forecast">
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">🌤️</div>
+            <div class="weather-forecast-temperatures">15° 9°</div>
+          </div>
+        </div>
       </main>
       <footer>
         Coded by
