--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
           <div class="weather-forecast-day">
             <div class="weather-forecast-date">Tue</div>
             <div class="weather-forecast-icon">🌤️</div>
-            <div class="weather-forecast-temperatures">15° 9°</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong>15°</strong>
+              </div>
+              <div class="weather-forecast-temperature">9°</div>
+            </div>
           </div>
         </div>
       </main>
